--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
-*{
-  box-sizing: content-box;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #444;
 }
 
 .navbar {
-  background: rgb(195, 255, 159);
+  background: #6acd3c;
   background: linear-gradient(
     90deg,
-    rgba(195, 255, 159, 1) 0%,
-    rgba(3, 68, 26, 1) 100%
+    #94d079 0%,
+    #49ad1b 100%
   );
 }
 
@@ -27,46 +34,31 @@
   text-align: left;
 }
 
-.container-promo {
-  background: rgb(195, 255, 159);
-  background: linear-gradient(
-    90deg,
-    rgba(195, 255, 159, 1) 0%,
-    rgba(3, 68, 26, 1) 100%
-  );
+#banner {
+  background: #6acd3c;
   padding-top: 5%;
+  overflow: hidden;
+}
+
+#banner a,p {
+  text-decoration: none;
+  color: black;
+  font-size: x-large;
+
+}
+
+#banner img{
+  width: 80%;
+  height: auto;
 }
 
 .promo-title {
-  font-size: 30px;
-  font-weight: 600;
-  font-family: "Courier New", Courier, monospace;
+  margin-top: 50px;
 }
-
 .promo-title-des {
-  font-weight: 500;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.fontUsed {
-  font-size: 30px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-style: italic;
-  text-decoration: underline;
-}
-
-.form-floating{
-  position: relative;
-}
-
-.icon{
-  position: absolute;
-  top: calc(50%);
-  left: 1.25rem;
-}
-
-.form-floating label, .form-floating .form-control {
-  left: .5rem;
-  padding-left: 3.5rem;
+  font-size: 20px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+  margin-top: 50px;
 }
