--- a/success.css
+++ b/success.css
@@ -1,9 +1,9 @@
 .navbar {
-  background: rgb(195, 255, 159);
+  background: #6acd3c;
   background: linear-gradient(
     90deg,
-    rgba(195, 255, 159, 1) 0%,
-    rgba(3, 68, 26, 1) 100%
+    #94d079 0%,
+    #49ad1b 100%
   );
 }
 
@@ -24,12 +24,7 @@
 }
 
 .container-promo {
-  background: rgb(195, 255, 159);
-  background: linear-gradient(
-    90deg,
-    rgba(195, 255, 159, 1) 0%,
-    rgba(3, 68, 26, 1) 100%
-  );
+  background: #6acd3c;
   padding-top: 5%;
 }
 
@@ -50,37 +45,6 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-style: italic;
   text-decoration: underline;
-}
-
-.form-floating {
-  position: relative;
-}
-
-.icon {
-  position: absolute;
-  top: calc(50%);
-  left: 1.25rem;
-}
-
-.form-floating label,
-.form-floating .form-control {
-  left: 0.5rem !important;
-  padding-left: 3.5rem !important;
-}
-
-.icon-textarea {
-  position: absolute;
-  top: 1.8rem;
-  left: 1.25rem;
-}
-
-button {
-  background: linear-gradient(
-    90deg,
-    rgba(195, 255, 159, 1) 0%,
-    rgb(34, 232, 103) 100%
-  );
-  border: none !important;
 }
 
 .success{
